added about page and began on home page

--- a/index.html
+++ b/index.html
@@ -11,11 +11,33 @@
     <!-- Navbar -->
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="./index.html">Home</a></li>
         <li><a href="./feedback.html">Feedback</a></li>
+        <li><a href="./about.html">About</a></li>
       </ul>
     </nav>
-    
+
+    <h1>Book Summaries</h1>
+    <div class="book">
+      <img src="./assets/plague.jpg" alt="The Plague book cover">
+      <h2>The Plague</h2>
+      <p>
+        The Plague is a novel by Albert Camus, published in 1947. The story is set in the Algerian city of Oran, which is hit by a deadly epidemic that causes the city to be quarantined. The novel explores themes of isolation, fear, and the human condition in the face of a catastrophic event.
+      </p>
+    </div>
+    <div class="book">
+      <img src="./assets/brief.jpg" alt="A Brief History of Time book cover">
+      <h2>A Brief History of Time</h2>
+      <p>
+        A Brief History of Time is a book by Stephen Hawking, published in 1988. The book explains the basics of modern physics, such as the Big Bang theory, black holes, and the nature of time. It aims to make complex scientific concepts accessible to a general audience and has become a bestseller.
+      </p>
+    </div>
+    <div class="book">
+      <img src="./assets/war.jpg" alt="The Art of War book cover">
+      <h2>The Art of War</h2>
+      <p>
+        The Art of War is a book by Sun Tzu, an ancient Chinese military strategist. The book is a treatise on military strategy and tactics, and is still widely read and studied today. It covers topics such as planning, tactics, and leadership, and has been used by military leaders and business executives alike.
+      </p>
+    </div>
   </body>
 </html>
