--- a/feedback.html
+++ b/feedback.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Feedback Form</title>
-    <link rel="stylesheet" href="feedback.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="feedback.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <!-- Navbar -->
     <nav>
       <ul>
         <li><a href="./index.html">Home</a></li>
-        <li><a href="#">About</a></li>
         <li><a href="./feedback.html">Feedback</a></li>
+        <li><a href="./about.html">About</a></li>
       </ul>
     </nav>
-    
+
     <h1>Feedback</h1>
     <form id="feedback-form">
       <label for="message">Message:</label>
       <textarea id="message" name="message" required></textarea>
       <label for="rating">Rating:</label>
-      <input type="radio" id="rating1" name="rating" value="1">
+      <input type="radio" id="rating1" name="rating" value="1" />
       <label for="rating1">1</label>
-      <input type="radio" id="rating2" name="rating" value="2">
+      <input type="radio" id="rating2" name="rating" value="2" />
       <label for="rating2">2</label>
-      <input type="radio" id="rating3" name="rating" value="3">
+      <input type="radio" id="rating3" name="rating" value="3" />
       <label for="rating3">3</label>
-      <input type="radio" id="rating4" name="rating" value="4">
+      <input type="radio" id="rating4" name="rating" value="4" />
       <label for="rating4">4</label>
-      <input type="radio" id="rating5" name="rating" value="5">
+      <input type="radio" id="rating5" name="rating" value="5" />
       <label for="rating5">5</label>
       <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
+      <input type="email" id="email" name="email" required />
       <button type="submit">Submit</button>
     </form>
     <script src="feedback.js"></script>
