added book summaries and added dropdown menu with styles

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="dropdown.css" />
     <title>Book Club Blog</title>
   </head>
 
@@ -14,30 +15,51 @@
         <li><a href="./index.html">Home</a></li>
         <li><a href="./feedback.html">Feedback</a></li>
         <li><a href="./about.html">About</a></li>
+        <li class="dropdown">
+          <a href="#">Styles</a>
+          <ul class="dropdown-menu">
+            <li><a id="dark-mode">Dark Mode</a></li>
+            <li><a id="light-mode">Light Mode</a></li>
+            <li><a id="colorful-mode">Colorful Mode</a></li>
+          </ul>
+        </li>
       </ul>
     </nav>
 
     <h1>Book Summaries</h1>
     <div class="book">
-      <img src="./assets/plague.jpg" alt="The Plague book cover">
+      <img src="./assets/plague.jpg" alt="The Plague book cover" />
       <h2>The Plague</h2>
       <p>
-        The Plague is a novel by Albert Camus, published in 1947. The story is set in the Algerian city of Oran, which is hit by a deadly epidemic that causes the city to be quarantined. The novel explores themes of isolation, fear, and the human condition in the face of a catastrophic event.
+        The Plague is a novel by Albert Camus, published in 1947. The story is
+        set in the Algerian city of Oran, which is hit by a deadly epidemic that
+        causes the city to be quarantined. The novel explores themes of
+        isolation, fear, and the human condition in the face of a catastrophic
+        event.
       </p>
     </div>
     <div class="book">
-      <img src="./assets/brief.jpg" alt="A Brief History of Time book cover">
+      <img src="./assets/brief.jpg" alt="A Brief History of Time book cover" />
       <h2>A Brief History of Time</h2>
       <p>
-        A Brief History of Time is a book by Stephen Hawking, published in 1988. The book explains the basics of modern physics, such as the Big Bang theory, black holes, and the nature of time. It aims to make complex scientific concepts accessible to a general audience and has become a bestseller.
+        A Brief History of Time is a book by Stephen Hawking, published in 1988.
+        The book explains the basics of modern physics, such as the Big Bang
+        theory, black holes, and the nature of time. It aims to make complex
+        scientific concepts accessible to a general audience and has become a
+        bestseller.
       </p>
     </div>
     <div class="book">
-      <img src="./assets/war.jpg" alt="The Art of War book cover">
+      <img src="./assets/war.jpg" alt="The Art of War book cover" />
       <h2>The Art of War</h2>
       <p>
-        The Art of War is a book by Sun Tzu, an ancient Chinese military strategist. The book is a treatise on military strategy and tactics, and is still widely read and studied today. It covers topics such as planning, tactics, and leadership, and has been used by military leaders and business executives alike.
+        The Art of War is a book by Sun Tzu, an ancient Chinese military
+        strategist. The book is a treatise on military strategy and tactics, and
+        is still widely read and studied today. It covers topics such as
+        planning, tactics, and leadership, and has been used by military leaders
+        and business executives alike.
       </p>
     </div>
+    <script src="index.js" />
   </body>
 </html>
