changed script tag to be closing to avoid issues

--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
         and business executives alike.
       </p>
     </div>
-    <script src="index.js" />
+    <script src="index.js" type="text/javascript"></script>
   </body>
 </html>
