made changed to script tag for feedback page to avoid issues

--- a/feedback.html
+++ b/feedback.html
@@ -35,6 +35,6 @@
       <input type="email" id="email" name="email" required />
       <button type="submit">Submit</button>
     </form>
-    <script src="feedback.js"></script>
+    <script src="feedback.js" type="text/javascript"></script>
   </body>
 </html>
