--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="./index.html">Home</a></li>
         <li><a href="./feedback.html">Feedback</a></li>
         <li><a href="./about.html">About</a></li>
+        <li><a href="./build.html">Build Your List</a></li>
         <li class="dropdown">
           <a href="#">Styles</a>
           <ul class="dropdown-menu">
