made book images clickable and takes you to their wikipedia

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 
     <h1>Book Summaries</h1>
     <div class="book">
-      <img src="./assets/plague.jpg" alt="The Plague book cover" />
+      <a href="https://en.wikipedia.org/wiki/The_Plague_(novel)">
+        <img src="./assets/plague.jpg" alt="The Plague book cover" />
+      </a>
+
       <h2>The Plague</h2>
       <p>
         The Plague is a novel by Albert Camus, published in 1947. The story is
@@ -40,7 +43,13 @@
       </p>
     </div>
     <div class="book">
-      <img src="./assets/brief.jpg" alt="A Brief History of Time book cover" />
+      <a href="https://en.wikipedia.org/wiki/A_Brief_History_of_Time">
+        <img
+          src="./assets/brief.jpg"
+          alt="A Brief History of Time book cover"
+        />
+      </a>
+
       <h2>A Brief History of Time</h2>
       <p>
         A Brief History of Time is a book by Stephen Hawking, published in 1988.
@@ -51,7 +60,10 @@
       </p>
     </div>
     <div class="book">
-      <img src="./assets/war.jpg" alt="The Art of War book cover" />
+      <a href="https://en.wikipedia.org/wiki/The_Art_of_War">
+        <img src="./assets/war.jpg" alt="The Art of War book cover" />
+      </a>
+
       <h2>The Art of War</h2>
       <p>
         The Art of War is a book by Sun Tzu, an ancient Chinese military
