added random images page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <li><a href="./feedback.html">Feedback</a></li>
         <li><a href="./about.html">About</a></li>
         <li><a href="./build.html">Build Your List</a></li>
+        <li><a href="./random.html">Random Image</a></li>
+
         <li class="dropdown">
           <a href="#">Styles</a>
           <ul class="dropdown-menu">
@@ -26,6 +28,7 @@
         </li>
       </ul>
     </nav>
+    <!---->
 
     <h1>Book Summaries</h1>
     <div class="book">
