--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
         <li><a href="./index.html">Home</a></li>
         <li><a href="./feedback.html">Feedback</a></li>
         <li><a href="./about.html">About</a></li>
+        <li><a href="./random.html">Random Image</a></li>
       </ul>
     </nav>
 
