--- a/feedback.html
+++ b/feedback.html
@@ -14,6 +14,7 @@
         <li><a href="./feedback.html">Feedback</a></li>
         <li><a href="./about.html">About</a></li>
         <li><a href="./random.html">Random Image</a></li>
+        <li><a href="./blog.html">Blog</a></li>
       </ul>
     </nav>
 
