--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="./about.html">About</a></li>
         <li><a href="./build.html">Build Your List</a></li>
         <li><a href="./random.html">Random Image</a></li>
+        <li><a href="./blog.html">Blog</a></li>
 
         <li class="dropdown">
           <a href="#">Styles</a>
