--- a/random.html
+++ b/random.html
@@ -17,6 +17,7 @@
         <li><a href="./feedback.html">Feedback</a></li>
         <li><a href="./about.html">About</a></li>
         <li><a href="./build.html">Build Your List</a></li>
+        <li><a href="./blog.html">Blog</a></li>
       </ul>
     </nav>
     <!---->
